--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:prod": "tsc && node dist/app.js",
     "start:dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
     "dotenv": "^16.3.1",
@@ -22,11 +23,16 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "bcrypt": "^5.1.1",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.2.2"
+    "jest": "^29.7.0",
+    "prettier": "^3.2.2",
+    "supertest": "^6.3.4",
+    "ts-jest": "^29.1.1"
   }
 }
